--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap-vue": "^2.15.0",
     "core-js": "^3.6.5",
     "firebase": "^7.15.5",
+    "uuid": "^8.2.0",
     "vue": "^2.6.11",
     "vue-router": "^3.3.4"
   },
